<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mr_l"
        android:layout_marginStart="@dimen/mr_l"
        android:layout_marginTop="@dimen/mr_l"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mr_xl"
            android:layout_marginEnd="@dimen/mr_l"
            android:layout_marginStart="@dimen/mr_l"
            android:layout_marginTop="@dimen/mr_l"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_equation"
                android:textColor="@color/textColor"
                android:textSize="@dimen/txt_sz_s" />

            <EditText
                android:id="@+id/equation_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mr_s"
                android:height="40dp"
                android:background="@drawable/round_edt_background"
                android:hint="H2 + O2 -> H2O"
                android:paddingEnd="@dimen/pd_m"
                android:paddingStart="@dimen/pd_m"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/txt_sz_m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mr_m"
                android:text="@string/not_check_equation"
                android:textColor="@color/textColor"
                android:textSize="@dimen/txt_sz_s" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.manminh.simplechem.ui.view.EffectedButton
        android:id="@+id/balance_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        android:layout_marginEnd="@dimen/mr_l"
        android:layout_marginStart="@dimen/mr_l"
        android:layout_marginTop="@dimen/reverse_mr1"
        android:background="@drawable/button"
        android:text="@string/balance"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_sz_l" />

    <android.support.v7.widget.CardView
        android:id="@+id/result_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mr_l"
        android:layout_marginEnd="@dimen/mr_l"
        android:layout_marginStart="@dimen/mr_l"
        android:layout_marginTop="@dimen/mr_l"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/mr_l"
                android:layout_marginStart="@dimen/mr_l"
                android:layout_marginTop="@dimen/mr_m"
                android:src="@drawable/ic_done_24dp"
                android:textColor="@color/textColor"
                android:textSize="@dimen/txt_sz_m" />

            <TextView
                android:id="@+id/info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/mr_m"
                android:layout_marginEnd="@dimen/mr_l"
                android:layout_marginStart="@dimen/mr_l"
                android:layout_marginTop="@dimen/mr_m"
                android:paddingBottom="@dimen/pd_l"
                android:text="2H2 + O2 - > 2H2O + sdfs +sdfsdf+ dsdfsdf+sdfsd+fsd"
                android:textColor="@color/textColor"
                android:textSize="@dimen/txt_sz_m" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
